[package]
name = "csv_viewer"
version = "0.9.0"
authors = ["Gruffudd Trick"]
edition = "2021"
rust-version = "1.65"

[features]
doc_cfg = []
doctest = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0" # streamlines reading and writing of csv data
atty = "0.2.14" # Easy checking if in terminal

# egui libraries
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Rust File Dialog
rfd = "0.11.1"

# Serialising and Deserialising of Structs
serde = { version = "1" }


# Allows application to gather system for memory allocation purposes.
sysinfo = "0.28.4"

# native:
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web (not applicable):
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_error_panic_hook = "0.1.6"
#tracing-wasm = "0.2"
#wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]